; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/ufs/extr_ufs-hisi.c_ufs_hisi_resume.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/ufs/extr_ufs-hisi.c_ufs_hisi_resume.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ufs_hba = type { i32 }
%struct.ufs_hisi_host = type { i32 }

@UFS_DEVICE_RESET_CTRL = common dso_local global i32 0, align 4
@BIT_SYSCTRL_REF_CLOCK_EN = common dso_local global i32 0, align 4
@PHY_CLK_CTRL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ufs_hba*, i32)* @ufs_hisi_resume to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ufs_hisi_resume(%struct.ufs_hba* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ufs_hba*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.ufs_hisi_host*, align 8
  store %struct.ufs_hba* %0, %struct.ufs_hba** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.ufs_hba*, %struct.ufs_hba** %4, align 8
  %8 = call %struct.ufs_hisi_host* @ufshcd_get_variant(%struct.ufs_hba* %7)
  store %struct.ufs_hisi_host* %8, %struct.ufs_hisi_host** %6, align 8
  %9 = load %struct.ufs_hisi_host*, %struct.ufs_hisi_host** %6, align 8
  %10 = getelementptr inbounds %struct.ufs_hisi_host, %struct.ufs_hisi_host* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %25

14:                                               ; preds = %2
  %15 = load %struct.ufs_hisi_host*, %struct.ufs_hisi_host** %6, align 8
  %16 = load i32, i32* @UFS_DEVICE_RESET_CTRL, align 4
  %17 = call i32 @ufs_sys_ctrl_writel(%struct.ufs_hisi_host* %15, i32 1048592, i32 %16)
  %18 = call i32 @udelay(i32 10)
  %19 = load %struct.ufs_hisi_host*, %struct.ufs_hisi_host** %6, align 8
  %20 = load i32, i32* @BIT_SYSCTRL_REF_CLOCK_EN, align 4
  %21 = load i32, i32* @PHY_CLK_CTRL, align 4
  %22 = call i32 @ufs_sys_ctrl_set_bits(%struct.ufs_hisi_host* %19, i32 %20, i32 %21)
  %23 = load %struct.ufs_hisi_host*, %struct.ufs_hisi_host** %6, align 8
  %24 = getelementptr inbounds %struct.ufs_hisi_host, %struct.ufs_hisi_host* %23, i32 0, i32 0
  store i32 0, i32* %24, align 4
  store i32 0, i32* %3, align 4
  br label %25

25:                                               ; preds = %14, %13
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local %struct.ufs_hisi_host* @ufshcd_get_variant(%struct.ufs_hba*) #1

declare dso_local i32 @ufs_sys_ctrl_writel(%struct.ufs_hisi_host*, i32, i32) #1

declare dso_local i32 @udelay(i32) #1

declare dso_local i32 @ufs_sys_ctrl_set_bits(%struct.ufs_hisi_host*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
